--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/swiper.min.css">
 </head>
 <body>
     <header class="home">
@@ -58,10 +59,9 @@
             <h1>Artisti in mostra</h1>
         </section>
         <hr class="solidblue" align="left">
-          <section class="home-sliding-cards">
-            <div class="card-container">
-              <?xml version="1.0" encoding="UTF-8"?><svg id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 41.68 41.68"><defs><style>.b{fill:#573cff;}</style></defs><path class="b" d="M20.84,0C9.33,0,0,9.33,0,20.84s9.33,20.84,20.84,20.84,20.84-9.33,20.84-20.84S32.35,0,20.84,0Zm5.3,27.94c.98,.97,.98,2.56,0,3.53-.48,.49-1.12,.73-1.76,.73s-1.28-.24-1.77-.73l-10.63-10.63,10.63-10.63c.97-.97,2.56-.97,3.53,0,.98,.98,.98,2.56,0,3.54l-7.09,7.09,7.09,7.1Z"/></svg>
-              <a href="/Illustrazione_contemporanea/html/artists/johnson.html" class="cards">
+          <section class="home-sliding-cards mySwiper">
+            <div class="card-container swiper-wrapper">
+              <a href="/Illustrazione_contemporanea/johnson.html" class="cards swiper-slide">
                 <div class="card">
                     <img src="/Illustrazione_contemporanea/img/artisti/adrian-johnson/adrian-johnson/AP_Adrian_Johnson_DAWG_2x-scaled.jpg" alt="">
                       <div class="container">
@@ -69,7 +69,7 @@
                       </div>
                     </div>
                   </a>
-                <a href="/Illustrazione_contemporanea/html/artists/robertson.html" class="cards">
+                <a href="/Illustrazione_contemporanea/robertson.html" class="cards swiper-slide">
                   <div class="card">
                       <img src="/Illustrazione_contemporanea/img/artisti/emily-robertson/emily-robertson/Handsome-Frank-Emily Robertson (1).jpg" alt="">
                         <div class="container">
@@ -77,7 +77,7 @@
                         </div>
                       </div>
                     </a>
-                  <a href="/Illustrazione_contemporanea/html/artists/clark.html" class="cards">
+                  <a href="/Illustrazione_contemporanea/clark.html" class="cards swiper-slide">
                     <div class="card">
                       <img src="/Illustrazione_contemporanea/img/artisti/hattie-clark/hattie-clark/Handsome-Frank-Hattie Clark (6).jpg" alt="">
                         <div class="container">
@@ -85,8 +85,58 @@
                     </div>
                 </div>
               </a>
-              <?xml version="1.0" encoding="UTF-8"?><svg id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 41.69 41.68"><defs><style>.b{fill:#573cff;}</style></defs><path class="b" d="M20.85,0C9.34,0,0,9.33,0,20.84s9.34,20.84,20.85,20.84,20.84-9.33,20.84-20.84S32.36,0,20.85,0Zm-1.77,31.47c-.49,.49-1.13,.73-1.77,.73s-1.28-.24-1.76-.73c-.98-.97-.98-2.56,0-3.53l7.09-7.1-7.09-7.09c-.98-.98-.98-2.56,0-3.54,.97-.97,2.55-.97,3.53,0l10.63,10.63-10.63,10.63Z"/></svg>
+                  <a href="/Illustrazione_contemporanea/icinori.html" class="cards swiper-slide">
+                    <div class="card">
+                      <img src="/Illustrazione_contemporanea/img/artisti/icinori/icinori/AP_Icinori_MOXIE_3_2x.jpg" alt="">
+                        <div class="container">
+                          <h4>Icinori</h4>
+                    </div>
+                </div>
+              </a>
+                  <a href="/Illustrazione_contemporanea/jullien.html" class="cards swiper-slide">
+                    <div class="card">
+                      <img src="/Illustrazione_contemporanea/img/artisti/jean-jullien/jean-jullien/Handsome-Frank-Jean Jullien (5).jpg" alt="">
+                        <div class="container">
+                          <h4>Jean Jullien</h4>
+                    </div>
+                </div>
+              </a>
+                  <a href="/Illustrazione_contemporanea/paukova.html" class="cards swiper-slide">
+                    <div class="card">
+                      <img src="/Illustrazione_contemporanea/img/artisti/martina-paukova/martina-paukova/AP_Martina_Paukova_Courier_Magazine_1-scaled.jpg" alt="">
+                        <div class="container">
+                          <h4>Martina Paukova</h4>
+                    </div>
+                </div>
+              </a>
+                  <a href="/Illustrazione_contemporanea/thompson.html" class="cards swiper-slide">
+                    <div class="card">
+                      <img src="/Illustrazione_contemporanea/img/artisti/michelle-thompson/michelle-thompson/Handsome-Frank-Michelle Thompson (5).jpg" alt="">
+                        <div class="container">
+                          <h4>Michelle Thompson</h4>
+                    </div>
+                </div>
+              </a>
+                  <a href="/Illustrazione_contemporanea/blow.html" class="cards swiper-slide">
+                    <div class="card">
+                      <img src="/Illustrazione_contemporanea/img/artisti/paul-blow/paul-blow/Handsome-Frank-Paul Blow (4).jpg" alt="">
+                        <div class="container">
+                          <h4>Paul Blow</h4>
+                    </div>
+                </div>
+              </a>
+                  <a href="/Illustrazione_contemporanea/mander.html" class="cards swiper-slide">
+                    <div class="card">
+                      <img src="/Illustrazione_contemporanea/img/artisti/sanna-mander/sanna-mander/AP_Sanna_Mander_havisamanda_2_2x-scaled.jpg" alt="">
+                        <div class="container">
+                          <h4>Sanna Mander</h4>
+                    </div>
+                </div>
+              </a>
             </div>
+            <div class="swiper-pagination"></div>
+            <script src="/Illustrazione_contemporanea/js/swiper-bundle.min.js"></script>
+            <script src="/Illustrazione_contemporanea/js/script.js"></script>
         </section>
     </main>
     <footer class="home">
