preparazione al responsive

--- a/info_utili.html
+++ b/info_utili.html
@@ -43,12 +43,7 @@
         </section>
             <hr class="solidyellow" align="left">
             <section class="maps">
-                <p>
-                    Ci trovi in Via Raimondo
-                    Franchetti, 5
-                    Catania (95123)
-                </p>
-                <img src="/Illustrazione_contemporanea/img/gps.PNG" alt="">       
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6329.57784495765!2d15.072863576294907!3d37.51289622720145!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1313fcd2c25c1883%3A0xbe3c697761685651!2sAccademia%20di%20Belle%20Arti%20Catania!5e0!3m2!1sit!2sit!4v1715028117470!5m2!1sit!2sit" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>      
         </section>
     </main>
     <footer class="info">
