--- a/info_utili.html
+++ b/info_utili.html
@@ -39,7 +39,7 @@
                 </p>
             </section>
         <section class="title-maps">
-            <h1>Come raggiungerci</h1>
+            <h1>Dove siamo</h1>
         </section>
             <hr class="solidyellow" align="left">
             <section class="maps">
